# music-tempo-otu

./: .gitignore  README.md
02_code/presentation_software/: event_marker.py  experiment.py  file_io.py  main.py  trial_manager.py
02_code/py/01_extraction/: README.md  main.py  pyproject.toml  trial_extraction.py  util.py
02_code/py/02_error/: analysis2.ipynb  check.ipynb
PresentationSoftware/: hidden_keys.py  usb_ttl_keyboard_test.py
